replaced getFirst and GetLast methods for compatibility